--- a/Janus/Podfile
+++ b/Janus/Podfile
@@ -5,6 +5,8 @@ target 'Janus' do
   # Comment this line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
+  platform :ios, '9.3'
+
   # Pods for Janus
   pod "PubNub"
 end
